no wrap for smolphone fix.

--- a/public/layout.css
+++ b/public/layout.css
@@ -87,6 +87,7 @@ h1 {
   font-size: 2.8em;
   letter-spacing: 5px;
   margin: 0.5em 0 0 0;
+  white-space: nowrap;
 }
 
 /* faff about with pure CSS menu */
@@ -107,7 +108,7 @@ input[type='radio'] { display: none; }
   color: #222;
   cursor: pointer;
   animation: 4s ease-in 0s 1 text-fadein;
-  text-shadow: 1px 1px #f1f1f1;
+  text-shadow: 1px 0.5px #f1f1f1;
   transition: all 0.25s ease-out;
 }
 
